--- a/app/src/main/res/drawable/en.xml
+++ b/app/src/main/res/drawable/en.xml
@@ -7,7 +7,7 @@
       android:pathData="M0,0h24v24H0z"
       android:strokeWidth="0.384"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorSecondary"/>
+      android:strokeColor="?android:attr/colorPrimary"/>
   <path
       android:pathData="M14,10h2v0.757a4.5,4.5 0,0 1,7 3.743L23,20h-2v-5.5c0,-1.43 -1.175,-2.5 -2.5,-2.5S16,13.07 16,14.5L16,20h-2L14,10zM12,4v2L4,6v5h8v2L4,13v5h8v2L2,20L2,4h10z"
       android:strokeWidth="0.384"
