--- a/app/src/main/res/drawable/gradient_card_bg.xml
+++ b/app/src/main/res/drawable/gradient_card_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <gradient android:startColor="@color/dark_blue"
+    <gradient android:startColor="@color/light_navy"
         android:endColor="@color/medium_blue"
         android:angle="0"/>
 
