--- a/app/src/main/res/layout/add_alert_dialog.xml
+++ b/app/src/main/res/layout/add_alert_dialog.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusableInTouchMode="false"
-        app:cardBackgroundColor="?attr/colorOnPrimary"
+        app:cardBackgroundColor="?attr/colorPrimary"
         app:cardCornerRadius="20dp"
         app:cardElevation="15dp"
         app:cardUseCompatPadding="true">
