--- a/app/src/main/res/layout/card_fav.xml
+++ b/app/src/main/res/layout/card_fav.xml
@@ -40,6 +40,7 @@
                 android:layout_width="70dp"
                 android:layout_height="60dp"
                 android:layout_marginStart="16dp"
+                android:clickable="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -62,6 +63,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
+                android:clickable="false"
                 android:gravity="center"
                 android:inputType="textMultiLine|textImeMultiLine"
                 android:text="america/Los_angelos"
