--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -7,7 +7,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/light_blue</item>
         <item name="colorOnSecondary">@color/medium_blue</item>
-
+        <item name="colorAccent">@color/light_blue</item>
 
         <item name="android:statusBarColor">?attr/colorPrimary</item>
 
