--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -76,7 +76,16 @@
         android:id="@+id/settingFragment"
         android:name="com.example.myweatherapp.SettingFragment"
         android:label="fragment_setting"
-        tools:layout="@layout/fragment_setting" />
+        tools:layout="@layout/fragment_setting" >
+        <action
+            android:id="@+id/action_settingFragment_to_mapsFragment"
+            app:destination="@id/mapsFragment" />
+        <argument
+            android:name="myLoc"
+            app:argType="com.google.android.gms.maps.model.LatLng"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
     <fragment
         android:id="@+id/startPrefFragment"
         android:name="com.example.myweatherapp.startPref.view.StartPrefFragment"
@@ -104,6 +113,9 @@
         <argument
             android:name="currentWeather"
             app:argType="com.example.myweatherapp.model.Forecast" />
+        <action
+            android:id="@+id/action_detailsFragment_self"
+            app:destination="@id/detailsFragment" />
     </fragment>
     <fragment
         android:id="@+id/mapsFragment"
@@ -118,6 +130,9 @@
         <action
             android:id="@+id/action_mapsFragment_to_startPrefFragment"
             app:destination="@id/startPrefFragment" />
+        <action
+            android:id="@+id/action_mapsFragment_to_settingFragment"
+            app:destination="@id/settingFragment" />
     </fragment>
     <fragment
         android:id="@+id/dialoge"
