--- a/app/src/main/res/layout/card_times.xml
+++ b/app/src/main/res/layout/card_times.xml
@@ -9,8 +9,8 @@
     </data>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="55dp"
-        android:layout_height="100dp"
+        android:layout_width="65dp"
+        android:layout_height="110dp"
         android:layout_margin="5dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="36dp"
@@ -18,8 +18,8 @@
 
         <LinearLayout
             android:id="@+id/layout_time"
-            android:layout_width="55dp"
-            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@drawable/solid_card_bg"
             android:orientation="vertical"
             android:weightSum="3">
@@ -28,11 +28,14 @@
                 android:id="@+id/text_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginRight="2dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="12 AM"
                 android:textColor="?attr/colorOnSecondary"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
             <ImageView
@@ -47,11 +50,11 @@
                 android:id="@+id/text_temp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="7dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="30°C"
-                android:textSize="14sp" />
+                android:textSize="13sp" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
