--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,7 +48,7 @@
                     android:id="@+id/progressBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="60dp"
+                    android:layout_marginStart="12dp"
                     android:layout_weight="1"
                     android:progress="0"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -513,8 +513,8 @@
 
                     <ImageView
                         android:id="@+id/image_desc"
-                        android:layout_width="140dp"
-                        android:layout_height="160dp"
+                        android:layout_width="120dp"
+                        android:layout_height="140dp"
                         android:layout_marginStart="16dp"
                         android:elevation="40dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -538,8 +538,8 @@
                         android:id="@+id/text_desc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="-15dp"
                         android:layout_marginTop="-32dp"
+                        android:layout_marginEnd="16dp"
                         android:text="Mostly Clear"
                         android:textColor="@color/light_xl_blue"
                         android:textSize="24sp"
@@ -553,14 +553,14 @@
                         android:id="@+id/text_tempNum"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="32dp"
                         android:fontFamily="sans-serif"
                         android:text="22"
                         android:textColor="@color/light_xl_blue"
                         android:textSize="80sp"
                         android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="@+id/text_desc"
-                        app:layout_constraintEnd_toStartOf="@+id/text_tempUnits"
-                        app:layout_constraintStart_toStartOf="@+id/text_desc"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/image_desc"
                         app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
