--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_bg_up"
-    tools:context=".SplashFragment">
+    tools:context=".ui.SplashFragment">
 
     <TextView
         android:id="@+id/title1"
